@@ -1,7 +1,7 @@
 [
   {
     "input": {
-      "packagename": "A",
+      "packagename": ["A"],
       "dbname": "mainline"
     },
     "output": {
@@ -149,5 +149,37 @@
       },
       "msg": "Successful Operation!"
     }
+  },
+  {
+    "input":{"packagename": ["A"], "dbname": "mainline", "level": "1"},
+    "output": {"code": "2001",
+               "data": {"A1": ["A",
+                               "0.0.23b",
+                               "mainline",
+                               [["D1", "install"],
+                                ["B1", "install"],
+                                ["D", "build"],
+                                ["B", "build"]]],
+                        "A2": ["A",
+                               "0.0.23b",
+                               "mainline",
+                               [["A1", "install"], ["C", "build"], ["C1", "install"]]],
+                        "A_src": ["source", "0.0.23b", "mainline", [["root", null]]],
+                        "B1": ["B", "0.0.2", "mainline", [["D", "build"], ["A", "build"]]],
+                        "B2": ["B", "0.0.2", "mainline", [["C", "build"]]],
+                        "C1": ["C",
+                               "0.1",
+                               "mainline",
+                               [["B2", "install"],
+                                ["A", "build"],
+                                ["B", "build"],
+                                ["A2", "install"]]],
+                        "C2": ["C", "0.1", "mainline", [[null, null]]],
+                        "D1": ["D",
+                               "0.11",
+                               "mainline",
+                               [["D2", "install"], ["A2", "install"]]],
+                        "D2": ["D", "0.11", "mainline", [[null, null]]]},
+               "msg": "Successful Operation!"}
   }
 ]
